tests/errors/compiler/param_threads_not_int/warnings/void_argument.c
int main() 
{	
	void a;
	t_sleep(a);
	return 0;
}
